# tessera

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
conformance/: CONFORMANCE.md  schema.md
conformance/vectors/: blind-index.json  vault-negative.json  vault.json  vmk-wrap.json
docs/: AUDIT-SCOPE.md  DEPENDENCIES.md  PARITY.md  README.md  SECURITY.md  SELF-AUDIT.md  SPEC.md  THREAT-MODEL.md
examples/: client_helper.rs
src/: blind_index.rs  client.rs  error.rs  lib.rs  protocol.rs  server.rs  suite.rs
tests/: sidecar.rs
